--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
 
         <div class="right-menu">
-            <span>Shop</span>
-            <span>Account</span>
-            <span>Menu</span>
+            <span class="nav-item">Shop</span>
+            <span class="nav-item">Account</span>
+            <span class="nav-item">Menu</span>
         </div>
       </nav>
 
